Improve CLI reliability, matching, tests, and release docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,32 @@ name = "tube-timing"
 version = "0.1.0"
 description = "CLI for TFL Unified API tube departures"
 readme = "README.md"
+license = {text = "MIT"}
 requires-python = ">=3.9"
 dependencies = [
   "requests>=2.31.0",
+]
+keywords = ["tfl", "tube", "london", "cli", "departures"]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Environment :: Console",
+  "Intended Audience :: End Users/Desktop",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Topic :: Utilities",
+]
+
+[project.optional-dependencies]
+dev = [
+  "build>=1.2.2",
+  "twine>=5.1.1",
 ]
 
 [project.scripts]
